Add and implement api findbyemail
