# src/main/java/xie/hailiang/resourceserver/service/CustomerService.java
@@ -8,6 +8,7 @@ public interface CustomerService {
 	
 	Customer addCustomer(Customer customer);
 	Optional<Customer> findCustomerById(long id);
+	Optional<Customer> findCustomerByEmail(String email);
 	Customer updateCustomer(Customer customer) throws Exception;
 	void deleteCustomer(long id) throws Exception;
 }
